Added ItemGroupsValidatorTest Refactored enum classes to model package