@@ -2,11 +2,15 @@ package uk.gov.companieshouse.itemgroupworkflowapi.validation;
 
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Component;
 import uk.gov.companieshouse.itemgroupworkflowapi.model.DeliveryDetails;
 import uk.gov.companieshouse.itemgroupworkflowapi.model.Item;
+import uk.gov.companieshouse.itemgroupworkflowapi.model.ItemCostProductType;
 import uk.gov.companieshouse.itemgroupworkflowapi.model.ItemCosts;
+import uk.gov.companieshouse.itemgroupworkflowapi.model.ItemDescriptionIdentifier;
 import uk.gov.companieshouse.itemgroupworkflowapi.model.ItemGroupData;
+import uk.gov.companieshouse.itemgroupworkflowapi.model.ItemKind;
 import uk.gov.companieshouse.itemgroupworkflowapi.model.Links;
 
 import java.util.ArrayList;
@@ -16,124 +20,127 @@ import java.util.List;
 public class ItemGroupsValidator {
     public static final String ORDER_NUMBER_INVALID = "Items Group : order number invalid";
     public static final String ITEM_GROUP_ITEMS_MISSING = "Items Group : items not provided";
-    public static final String LINKS_MISSING = "Items Group : links not provided";
+    public static final String ITEM_GROUP_LINKS_MISSING = "Items Group : links not provided";
     public static final String LINKS_ORDER_NUMBER_MISSING = "Items Group : link order number not provided";
-    public static final String INVALID_DESCRIPTION_ID = "Items Group : invalid item description identifier : ";
+    public static final String INVALID_DESCRIPTION_IDENTIFIER = "Items Group : invalid item description identifier : ";
     public static final String INVALID_ITEM_COST_PRODUCT_TYPE = "Items Group : invalid item cost product type : ";
-    public static final String INVALID_ITEM_KIND = "Items Group : invalid item kind : ";
+    public static final String INVALID_ITEM_KIND_NAME = "Items Group : invalid item kind : ";
     public static final String COMPANY_NUMBER_MISSING = "Items Group Delivery Details : missing item company number for : ";
     public static final String COMPANY_NAME_MISSING = "Items Group Delivery Details : missing item company name for : ";
 
-    public List<String> validateCreateItemPayload(ItemGroupData itemGroupData) {
+    public List<String> validateCreateItemData(ItemGroupData dto) {
         final List<String> errors = new ArrayList<>();
 
-        if(!isOrderNumberValid(itemGroupData, errors))
-            return errors;
+        if (orderNumberValid(dto, errors) &&
+            itemsPresent(dto, errors) &&
+            linksPresentWithOrderNumber(dto, errors))
+        {
+            validateItemDescriptionIdentifier(dto, errors);
+            validateItemKind(dto, errors);
+            validateItemCostsProductType(dto, errors);
 
-        validateCompanyNumberAndName(itemGroupData, errors);
-        validateItems(itemGroupData, errors);
-        validateLinks(itemGroupData, errors);
-        validateItemDescriptionIdentifier(itemGroupData, errors);
-        validateItemCostsProductType(itemGroupData, errors);
-        validateItemKind(itemGroupData, errors);
+            // TODO finish the test for this last one!!!
+            validateCompanyNumberAndName(dto, errors);
+        }
 
         return errors;
     }
 
-    private boolean isOrderNumberValid(ItemGroupData itemGroupData, List<String> errors) {
-        boolean result = true;
-        String orderNumber = itemGroupData.getOrderNumber();
-
-        if (isNull(orderNumber) || orderNumber.isEmpty() || orderNumber.isBlank()) {
+    private boolean orderNumberValid(ItemGroupData dto, List<String> errors) {
+        if (StringUtils.isBlank(dto.getOrderNumber())) {
             errors.add(ORDER_NUMBER_INVALID);
-            result = false;
+            return false;
         }
 
-        return result;
-    }
-    //
-    // Taken from: https://developer-specs.cidev.aws.chdev.org/item-group-workflow-api/reference/itemgroups/create-item-group
-    //
-    // Optional : The company name associated with this item (mandatory field if the item relates to a specific company)
-    // Optional : The company number associated with this item (mandatory field if the item relates to a specific company)
-    //
-    // Both flagged as optional and 'mandatory field if the item relates to a specific company'
-    // Working assumption :  if delivery_details.company_name is present then both these fields are mandatory.
-    //
-    private void validateCompanyNumberAndName(ItemGroupData itemGroupData, List<String> errors) {
-        DeliveryDetails deliveryDetails = itemGroupData.getDeliveryDetails();
-
-        if (nonNull(deliveryDetails)) {
-            String deliveryCompanyName = deliveryDetails.getCompanyName();
-
-            if (nonNull(deliveryCompanyName) && !deliveryCompanyName.isBlank() && !deliveryCompanyName.isEmpty()) {
-                for (Item item : itemGroupData.getItems()) {
-                    String companyNumber = item.getCompanyNumber();
-                    String companyName = item.getCompanyName();
-
-                    if (isNull(companyNumber) || companyNumber.isBlank() || companyNumber.isEmpty()) {
-                        errors.add(COMPANY_NUMBER_MISSING + deliveryCompanyName);
-                    }
-
-                    if (isNull(companyName) || companyName.isBlank() || companyName.isEmpty()) {
-                        errors.add(COMPANY_NAME_MISSING + deliveryCompanyName);
-                    }
-                }
-            }
-        }
+        return true;
     }
 
-    private void validateItems(ItemGroupData itemGroupData, List<String> errors) {
-        List<Item> items = itemGroupData.getItems();
+    private boolean itemsPresent(ItemGroupData dto, List<String> errors) {
+        List<Item> items = dto.getItems();
 
         if (isNull(items) || items.isEmpty()) {
             errors.add(ITEM_GROUP_ITEMS_MISSING);
+            return false;
         }
+
+        return true;
     }
 
-    private void validateLinks(ItemGroupData itemGroupData, List<String> errors) {
-        Links links = itemGroupData.getLinks();
+    private boolean linksPresentWithOrderNumber(ItemGroupData dto, List<String> errors) {
+        Links links = dto.getLinks();
 
         if (isNull(links)) {
-            errors.add(LINKS_MISSING);
-            return;
+            errors.add(ITEM_GROUP_LINKS_MISSING);
+            return false;
         }
 
-        String order = links.getOrder();
-
-        if (isNull(order) || order.isBlank() || order.isEmpty()) {
+        if (StringUtils.isBlank(links.getOrder())) {
             errors.add(LINKS_ORDER_NUMBER_MISSING);
+            return false;
         }
+
+        return true;
     }
+    /**
+     * Taken from: <a href="https://developer-specs.cidev.aws.chdev.org/item-group-workflow-api/reference/itemgroups/create-item-group">create item group</a>
+     * Optional : The company name associated with this item (mandatory field if the item relates to a specific company)
+     * Optional : The company number associated with this item (mandatory field if the item relates to a specific company)
+     * Both flagged as optional and 'mandatory field if the item relates to a specific company'
+     * Working assumption : if delivery_details.company_name is present then both these fields are mandatory.
+     */
+    private void validateCompanyNumberAndName(ItemGroupData dto, List<String> errors) {
+        DeliveryDetails deliveryDetails = dto.getDeliveryDetails();
+        if (isNull(deliveryDetails))
+            return;
 
-    private void validateItemDescriptionIdentifier(ItemGroupData itemGroupData, List<String> errors) {
-        for (Item item : itemGroupData.getItems()) {
-            String descriptionIdentifier = item.getDescriptionIdentifier();
+        String deliveryCompanyName = deliveryDetails.getCompanyName();
+        if (StringUtils.isBlank(deliveryCompanyName))
+            return;
 
-            if (isNull(ItemDescriptionIdentifier.getEnumValue(descriptionIdentifier))) {
-                errors.add(INVALID_DESCRIPTION_ID + descriptionIdentifier);
+        for (Item item : dto.getItems()) {
+            String companyNumber = item.getCompanyNumber();
+            String companyName = item.getCompanyName();
+
+            if (StringUtils.isBlank(companyNumber)) {
+                errors.add(COMPANY_NUMBER_MISSING + deliveryCompanyName);
+            }
+
+            if (StringUtils.isBlank(companyName)) {
+                errors.add(COMPANY_NAME_MISSING + deliveryCompanyName);
             }
         }
     }
 
-    private void validateItemCostsProductType(ItemGroupData itemGroupData, List<String> errors) {
-        for (Item item : itemGroupData.getItems()) {
-            for (ItemCosts itemCost : item.getItemCosts()) {
-                String productType = itemCost.getItemCost();
+    private void validateItemDescriptionIdentifier(ItemGroupData dto, List<String> errors) {
+        for (Item item : dto.getItems()) {
+            String descriptionIdentifier = item.getDescriptionIdentifier();
 
-                if (isNull(ItemCostProductType.getEnumValue(productType))) {
-                    errors.add(INVALID_ITEM_COST_PRODUCT_TYPE + productType);
+            if (isNull(ItemDescriptionIdentifier.getEnumValue(descriptionIdentifier))) {
+                errors.add(INVALID_DESCRIPTION_IDENTIFIER + descriptionIdentifier);
+            }
+        }
+    }
+
+    private void validateItemCostsProductType(ItemGroupData dto, List<String> errors) {
+        for (Item item : dto.getItems()) {
+            if(nonNull(item.getItemCosts())) {
+                for (ItemCosts itemCost : item.getItemCosts()) {
+                    String productType = itemCost.getProductType();
+
+                    if (isNull(ItemCostProductType.getEnumValue(productType))) {
+                        errors.add(INVALID_ITEM_COST_PRODUCT_TYPE + productType);
+                    }
                 }
             }
         }
     }
 
-    private void validateItemKind(ItemGroupData itemGroupData, List<String> errors) {
-        for (Item item : itemGroupData.getItems()) {
+    private void validateItemKind(ItemGroupData dto, List<String> errors) {
+        for (Item item : dto.getItems()) {
             String itemKind = item.getKind();
 
             if (isNull(ItemKind.getEnumValue(itemKind))) {
-                errors.add(INVALID_ITEM_KIND + itemKind);
+                errors.add(INVALID_ITEM_KIND_NAME + itemKind);
             }
         }
     }
